// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`smoking CLI runs a mix of passing and failing cases: stdout 1`] = `
"FOO = tar
✔ pass
✘ fail
  1 | throw new Error("intentional failure")
              ^
error: intentional failure
      at /tmp/smoking-run-<random>/case-1.ts:1:11

Bun v<version> (<platform>)
"
`;

exports[`smoking CLI runs a mix of passing and failing cases: stderr 1`] = `
"1 | throw new Error("intentional failure")
              ^
error: intentional failure
      at /tmp/smoking-run-<random>/case-1.ts:1:11

Bun v<version> (<platform>)
"
`;

exports[`smoking CLI installs a declared \`dependency\` before running the case: stdout 1`] = `
"→ installing dependency: donly
bun add v<version> (<hash>)

installed donly@0.0.29 with binaries:
 - donly

parsed greeting = hello
✔ uses-dependency
"
`;

exports[`smoking CLI installs a declared \`dependency\` before running the case: stderr 1`] = `
"Saved lockfile
"
`;

exports[`smoking CLI installs a \`dependency\` pinned to a specific version: stdout 1`] = `
"→ installing dependency: donly@0.0.28
bun add v<version> (<hash>)

installed donly@0.0.28 with binaries:
 - donly

parsed greeting = hello
✔ pinned-version
"
`;

exports[`smoking CLI installs a \`dependency\` pinned to a specific version: stderr 1`] = `
"Saved lockfile
"
`;

exports[`smoking CLI installs hotconfigs and reads an env-backed config in the case script: stdout 1`] = `
"→ installing dependency: hotconfigs
bun add v<version> (<hash>)

installed hotconfigs@1.0.8

FOO = tar
✔ uses-hotconfigs
"
`;

exports[`smoking CLI installs hotconfigs and reads an env-backed config in the case script: stderr 1`] = `
"Saved lockfile
"
`;

exports[`smoking CLI writes a \`file\` directive's content before running the case: stdout 1`] = `
"file content = Content
✔ did
"
`;

exports[`smoking CLI writes a \`file\` directive's content before running the case: stderr 1`] = `""`;
